<resources>
    <string name="app_name">Duke</string>

    <string name="modifyNickname_tev">昵 称：</string>
    <string name="modifyNickname_hint">如"放羊的猩猩"</string>
    <string name="modifyBirthday_tev">生 日：</string>
    <string name="modifyBirthday_hint">如"1990-09-09"</string>
    <string name="modifyEmail_tev">邮 箱：</string>
    <string name="modifyEmail_hint">如"story@sina.com"</string>
    <string name="loginUsername_tev">帐 号：</string>
    <string name="loginPassword_tev">密 码：</string>
    <string name="loginButton">登 \t\t\t\t\t\t 录</string>
    <string name="registerButton1">注 \t\t\t\t\t\t 册</string>
    <string name="registerButton">没有帐号？点击注册</string>
    <string name="login_tev">细说我们的故事</string>
    <string name="PCButton">修 改 密 码</string>
    <string name="modifyPassword_previous">原  密  码：</string>
    <string name="modifyPassword_new">新  密  码：</string>
    <string name="modifyPassword_repeated">重复新密码：</string>
    <string name="nickname_storyDetails">Duke</string>
    <string name="text_hint">此处显示用户点击的事情详情里对应文本</string>
    <string name="counts">200+</string>
    <string name="talkCounts_show">包含200条评论</string>
    <string name="nickname_talk">B.I</string>
    <string name="talkText">好久不见！！！</string>
    <string name="time">2017-01-17 16:05</string>
    <string name="hint_storyDetails">请在此输入你想说的话</string>
    <string name="back">退\t \t出</string>
    <string name="author">Copyright @ 1995 - 2017 DUKE. All Rights Reserved</string>
    <string name="modify">修\t \t改</string>
    <string name="newStory">最新</string>
    <string name="hotStory">最热</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
