<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modifyBackground"
    tools:context="com.qf.story.view.ModifyEmailActivity">

    <com.qf.story.view.MyActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myActionBar_email"></com.qf.story.view.MyActionBar>

    <RelativeLayout
        android:layout_below="@+id/myActionBar_email"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:id="@+id/modifyEmailTEV"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/modifyEmail_tev"
            />

        <EditText
            android:layout_toRightOf="@+id/modifyEmailTEV"
            android:id="@+id/modifyEmailEDT"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/modifyEmail_hint"
            android:textColorHint="@color/modifyBackground"
            android:background="@null"
            />
    </RelativeLayout>

    <Button
        android:layout_width="200dp"
        android:text="@string/modify"
        android:layout_centerInParent="true"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="btnModify"
        android:background="@drawable/bottm_bg"/>
</RelativeLayout>
