<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modify_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modifyBackground"
    tools:context=".view.ModifyPasswordActivity">

    <com.qf.story.view.MyActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myActionBar_password"/>

    <RelativeLayout
        android:layout_below="@+id/myActionBar_password"
        android:id="@+id/previousPasswordLayout"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/previousPasswordTEV"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textColor="@color/modifyPasswordTEV"
            android:text="@string/modifyPassword_previous"
            />

        <EditText
            android:layout_toRightOf="@+id/previousPasswordTEV"
            android:id="@+id/previousPasswordEDT"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            android:background="@null"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/newPasswordLayout"
        android:layout_below="@+id/previousPasswordLayout"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/newPasswordTEV"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textColor="@color/modifyPasswordTEV"
            android:text="@string/modifyPassword_new"
            />

        <EditText
            android:layout_toRightOf="@+id/newPasswordTEV"
            android:id="@+id/newPasswordEDT"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/black"
            android:inputType="numberPassword"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/repeatedPasswordLayout"
        android:layout_below="@+id/newPasswordLayout"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/repeatedPasswordTEV"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            android:textColor="@color/modifyPasswordTEV"
            android:text="@string/modifyPassword_repeated"
            />

        <EditText
            android:layout_toRightOf="@+id/repeatedPasswordTEV"
            android:id="@+id/repeatedPasswordEDT"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:background="@null"
            android:textColor="@color/black"
            android:inputType="numberPassword"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/modifyPasswordButton"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/repeatedPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/PCButton"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="btnModifyPassword1"
        android:background="@drawable/bottm_bg"/>

</RelativeLayout>
