<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/talkLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <RelativeLayout
            android:id="@+id/talkLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_commend"
                android:id="@+id/talkLayoutTopImg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/talkCounts_show"
                android:textColor="@color/PCTextColor"
                android:layout_toRightOf="@+id/talkLayoutTopImg"
                android:id="@+id/talkLayoutTopTEV"/>

        </RelativeLayout>

        <TextView
            android:layout_below="@id/talkLayoutTop"
            android:id="@+id/line_talk1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_below="@+id/line_talk1"
            android:id="@+id/talkLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:id="@+id/potrait_talk"
                android:src="@drawable/portrait_talk"/>

            <RelativeLayout
                android:layout_toRightOf="@+id/potrait_talk"
                android:id="@+id/talkMiddle_middle"
                android:layout_width="150dp"
                android:layout_marginLeft="10dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/nickname_talk"
                    android:textColor="@color/registerButton"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:id="@+id/nickname_talk"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/talkTEV"
                    android:textColor="@color/modifyPasswordTEV"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:text="@string/talkText"
                    android:layout_below="@+id/nickname_talk"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_toRightOf="@+id/talkMiddle_middle"
                android:layout_width="160dp"
                android:id="@+id/talkMiddle_right"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/talkMiddle_rightImg"
                    android:src="@drawable/icon_commnum"/>
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/talkMiddle_rightImg"
                    android:id="@+id/time_talk"
                    android:gravity="bottom"
                    android:textColor="@color/modifyPasswordTEV"
                    android:textSize="10sp"
                    android:text="@string/time"/>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_below="@id/talkLayoutMiddle"
            android:id="@+id/line_talk2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:layout_below="@+id/line_talk2"
            android:id="@+id/talkLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>


</LinearLayout>
