<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/modifyBackground"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white">

        <RelativeLayout
        android:id="@+id/storyDetailsTop"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/potrait_storyDetails"
            android:src="@drawable/pc"/>

        <RelativeLayout
            android:layout_toRightOf="@+id/potrait_storyDetails"
            android:id="@+id/storyDetailsTop_middle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:id="@+id/sex_storyDetails"
                android:src="@drawable/icon_man"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/registerButton"
                android:text="@string/nickname_storyDetails"
                android:id="@+id/nickname_storyDetails"
                android:layout_toRightOf="@+id/sex_storyDetails"/>
            <TextView
                android:textSize="10sp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/time_storyDetails"
                android:layout_below="@id/sex_storyDetails"/>

        </RelativeLayout>

        <TextView
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="10sp"/>

    </RelativeLayout>

        <TextView
        android:layout_below="@id/storyDetailsTop"
        android:id="@+id/line_storyDetails"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

        <RelativeLayout
        android:id="@+id/storyDetailsMiddle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_storyDetails">

        <TextView
            android:id="@+id/storyDetailsTEV"
            android:paddingLeft="5dp"
            android:textColor="@color/modifyPasswordTEV"
            android:text="@string/text_hint"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:id="@+id/storyDetailsImg"
            android:src="@drawable/storydetails"
            android:layout_below="@+id/storyDetailsTEV"/>

    </RelativeLayout>

        <RelativeLayout
        android:layout_below="@+id/storyDetailsMiddle"
        android:id="@+id/storyDetailsBottom"
        android:layout_width="match_parent"
            android:gravity="center"
        android:layout_height="40dp">

        <ImageView
            android:layout_marginLeft="200dp"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/talk_storyDetails"
            android:src="@drawable/icon_talk"/>
        <TextView
            android:layout_toRightOf="@+id/talk_storyDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10sp"
            android:text="@string/counts"
            android:textColor="@color/modifyPasswordTEV"
            android:id="@+id/talk_storyDetails_counts"/>
        <ImageView
            android:layout_toRightOf="@+id/talk_storyDetails_counts"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/heart_storyDetails"
            android:src="@drawable/icon_heart"/>
        <TextView
            android:layout_toRightOf="@id/heart_storyDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="10sp"
            android:text="@string/counts"
            android:textColor="@color/modifyPasswordTEV"
            android:id="@+id/heart_storyDetails_counts"/>

    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
